--- a/IdentityDemo/appsettings.json
+++ b/IdentityDemo/appsettings.json
@@ -16,5 +16,12 @@
     "UserName": "swiftfoods48@gmail.com",
     "Password": "nktc drmx neuw fmqp", // app password of gmail two step
     "From": "newlifebro23@gmail.com"
+  },
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "http://0.0.0.0:5000"
+      }
+    }
   }
 }
